force-app/main/default/objects/OpenPoint__c/OpenPoint__c.object-meta.xml
<CustomObject>
    <label>Open Point</label>
    <nameField>
        <label>Open Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>