force-app/main/default/objects/OpenPoint__c/fields/ProjectS5__c.field-meta.xml
<CustomField>
    <fullName>ProjectS5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>SpringProject_Project__c</referenceTo>
    <relationshipLabel>Open Points</relationshipLabel>
    <relationshipName>Open_Points</relationshipName>
    <type>Lookup</type>
</CustomField>