force-app/main/default/objects/OpenPoint__c/fields/WorkItemUS__c.field-meta.xml
<CustomField>
    <fullName>WorkItemUS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>WorkItem__c</referenceTo>
    <relationshipLabel>Open Points</relationshipLabel>
    <relationshipName>OpenPoints</relationshipName>
    <type>Lookup</type>
</CustomField>