force-app/main/default/objects/OpenPoint__c/listViews/Integration.listView-meta.xml
<ListView>
    <fullName>Integration</fullName>
    <columns>NAME</columns>
    <columns>WorkItemUS__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Nachiappan N</value>
    </filters>
    <label>Integration</label>
</ListView>