force-app/main/default/objects/OpenPoint__c/listViews/OpenPoints.listView-meta.xml
<ListView>
    <fullName>OpenPoints</fullName>
    <columns>Id__c</columns>
    <columns>ProjectS5__c</columns>
    <columns>NAME</columns>
    <columns>WorkItemUS__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Points</label>
</ListView>